--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
 <body class="bg-gray-800 text-gray-300">
   <header>
     <nav class="flex justify-center space-x-4 bg-gray-800 p-4">
-      <a href="/src/index.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Accueil</a>
+      <a href="index.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Accueil</a>
       <a href="men.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Hommes</a>
-      <a href="/src/women.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Femmes</a>
-      <a href="/src/kid.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Enfants</a>
+      <a href="women.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Femmes</a>
+      <a href="kid.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Enfants</a>
     </nav>
   </header>
 
@@ -25,7 +25,7 @@
 
     <div class="px-4 py-16 mx-auto max-w-7xl sm:px-6 lg:px-8 lg:py-20">
       <div class="flex flex-wrap justify-center gap-x-80">
-        <img src="/src/img/men/homme-chemise-jean.jpg" class="w-24 h-24 rounded-full" alt="Homme">
+        <img src="img/men/homme-chemise-jean.jpg" class="w-24 h-24 rounded-full" alt="Homme">
         <img src="/src/img/kid/enfant-robe-bleu.jpg" class="w-24 h-24 rounded-full" alt="Enfant"> 
         <img src="/src/img/women/femme-pant-black.jpg" class="w-24 h-24 rounded-full" alt="Femme">
       </div>
