--- a/src/men.html
+++ b/src/men.html
@@ -49,33 +49,33 @@
   </div>
 
   <section id="chemise" class="p-6 grid grid-cols-3  mx-auto rounded-xl shadow-lg  gap-4 mt-10 "> 
-    <a href="/src/article.html" class="mt-4 text-sm font-light tracking-wide  text-gray-300 md:text-base">
-      <img src="/src/img/men/homme-chemise-blanc-et-bleu.jpg" class="w-30 h-30 rounded-md" alt="Image 1">
+    <a href="article.html" class="mt-4 text-sm font-light tracking-wide  text-gray-300 md:text-base">
+      <img src="img/men/homme-chemise-blanc-et-bleu.jpg" class="w-30 h-30 rounded-md" alt="Image 1">
       Chemise 1<br>
       <span class="mt-4 text-sm font-light tracking-wide text-gray-500 md:text-base">30,00€</span>
     </a>
     <a href="#" class="mt-4 text-sm font-light tracking-wide  text-gray-300 md:text-base">
-      <img src="/src/img/men/homme-chemise-jean.jpg" class="w-30 h-30 rounded-md" alt="Image 1">
+      <img src="img/men/homme-chemise-jean.jpg" class="w-30 h-30 rounded-md" alt="Image 1">
       Chemise 2<br>
       <span class="mt-4 text-sm font-light tracking-wide text-gray-500 md:text-base">30,00€</span>
     </a>
     <a href="#" class="mt-4 text-sm font-light tracking-wide  text-gray-300 md:text-base">
-      <img src="/src/img/men/homme-chemisse (1).jpg" class="w-30 h-30 rounded-md" alt="Image 1">
+      <img src="img/men/homme-chemisse (1).jpg" class="w-30 h-30 rounded-md" alt="Image 1">
       Chemise 3<br>
       <span class="mt-4 text-sm font-light tracking-wide text-gray-500 md:text-base">30,00€</span>
     </a>
     <a href="#" class="mt-4 text-sm font-light tracking-wide  text-gray-300 md:text-base">
-      <img src="/src/img/men/homme-chemisse (2).jpg" class="w-30 h-30 rounded-md" alt="Image 1">
+      <img src="img/men/homme-chemisse (2).jpg" class="w-30 h-30 rounded-md" alt="Image 1">
       Chemise 4<br>
       <span class="mt-4 text-sm font-light tracking-wide text-gray-500 md:text-base">30,00€</span>
     </a>
     <a href="#" class="mt-4 text-sm font-light tracking-wide  text-gray-300 md:text-base">
-      <img src="/src/img/men/homme-chemisse (3).jpg" class="w-35 h-30 rounded-md" alt="Image 1">
+      <img src="img/men/homme-chemisse (3).jpg" class="w-35 h-30 rounded-md" alt="Image 1">
       Chemise 5<br>
       <span class="mt-4 text-sm font-light tracking-wide text-gray-500 md:text-base">30,00€</span>
     </a>
     <a href="#" class="mt-4 text-sm font-light tracking-wide  text-gray-300 md:text-base">
-      <img src="/src/img/men/homme-chemisse (4).jpg" class="w-30 h-30 rounded-md" alt="Image 1">
+      <img src="img/men/homme-chemisse (4).jpg" class="w-30 h-30 rounded-md" alt="Image 1">
       Chemise 6<br>
       <span class="mt-4 text-sm font-light tracking-wide text-gray-500 md:text-base">30,00€</span>
     </a>
