--- a/src/men.html
+++ b/src/men.html
@@ -9,10 +9,10 @@
 <body class="bg-gray-800 text-gray-300">
   <header>
     <nav class="flex justify-center space-x-4 bg-gray-800 p-4">
-      <a href="/src/index.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Accueil</a>
-      <a href="/src/men.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Hommes</a>
-      <a href="/src/women.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Femmes</a>
-      <a href="/src/kid.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Enfants</a>
+      <a href="index.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Accueil</a>
+      <a href="men.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Hommes</a>
+      <a href="women.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Femmes</a>
+      <a href="kid.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Enfants</a>
     </nav>
   </header>
 
