--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,9 @@
 
     <div class="px-4 py-16 mx-auto max-w-7xl sm:px-6 lg:px-8 lg:py-20">
       <div class="flex flex-wrap justify-center gap-x-80">
-        <img src="img/men/homme-chemise-jean.jpg" class="w-24 h-24 rounded-full" alt="Homme">
-        <img src="img/kid/enfant-robe-bleu.jpg" class="w-24 h-24 rounded-full" alt="Enfant"> 
-        <img src="img/women/femme-pant-black.jpg" class="w-24 h-24 rounded-full" alt="Femme">
+        <img src="img/men/clothing-homme.svg" class="w-24 h-24 rounded-full" alt="Homme">
+        <img src="img/kid/clothing-enfant.svg" class="w-24 h-24 rounded-full" alt="Enfant"> 
+        <img src="img/women/clothing-femme.svg" class="w-24 h-24 rounded-full" alt="Femme">
       </div>
 
       <!-- <div class="text-center mt-12">
@@ -72,5 +72,32 @@
       </button>
     </div> -->$-
   </div>
+
+  
+  <footer class="bg-gray-800 text-white py-16">
+    <div class="container mx-auto text-center">
+      <div class="mb-6">
+        <h2 class="text-3xl font-bold">******</h2>
+        <p class="text-gray-400 mt-2">nos  réseaux sociaux</p>
+      </div>
+      <div class="flex justify-center space-x-4 mb-6">
+        <a href="#" class="text-gray-400 hover:text-white">
+          <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path d="M22.675 0H1.325C.593 0 0 .592 0 1.324v21.351C0 23.406.593 24 1.325 24h11.495v-9.294H9.69v-3.622h3.129V8.413c0-3.1 1.893-4.788 4.657-4.788 1.325 0 2.463.099 2.794.143v3.24l-1.918.001c-1.504 0-1.796.715-1.796 1.763v2.31h3.587l-.467 3.622h-3.12V24h6.116c.732 0 1.325-.593 1.325-1.325V1.324C24 .592 23.407 0 22.675 0z"/>
+          </svg>
+          </a>
+          <a href="#" class="text-gray-400 hover:text-white">
+          <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 2.163c3.204 0 3.584.012 4.849.07 1.366.062 2.633.332 3.608 1.308.975.975 1.245 2.242 1.308 3.608.058 1.265.07 1.645.07 4.849s-.012 3.584-.07 4.849c-.062 1.366-.332 2.633-1.308 3.608-.975.975-2.242 1.245-3.608 1.308-1.265.058-1.645.07-4.849.07s-3.584-.012-4.849-.07c-1.366-.062-2.633-.332-3.608-1.308-.975-.975-1.245-2.242-1.308-3.608-.058-1.265-.07-1.645-.07-4.849s.012-3.584.07-4.849c.062-1.366.332-2.633 1.308-3.608.975-.975 2.242-1.245 3.608-1.308C8.416 2.175 8.796 2.163 12 2.163zm0-2.163C8.738 0 8.332.014 7.052.072 5.775.129 4.604.381 3.594 1.391 2.585 2.4 2.333 3.571 2.276 4.848.014 8.332 0 8.738 0 12c0 3.262.014 3.668.072 4.948.057 1.277.309 2.448 1.319 3.457 1.009 1.009 2.18 1.261 3.457 1.319C8.332 23.986 8.738 24 12 24c3.262 0 3.668-.014 4.948-.072 1.277-.057 2.448-.309 3.457-1.319 1.009-1.009 1.261-2.18 1.319-3.457.058-1.28.072-1.686.072-4.948 0-3.262-.014-3.668-.072-4.948-.057-1.277-.309-2.448-1.319-3.457C19.396.381 18.225.129 16.948.072 15.668.014 15.262 0 12 0zm0 5.838a6.162 6.162 0 1 0 0 12.324 6.162 6.162 0 0 0 0-12.324zm0 10.162a3.999 3.999 0 1 1 0-8 3.999 3.999 0 0 1 0 8zm6.406-11.845a1.44 1.44 0 1 0 0 2.88 1.44 1.44 0 0 0 0-2.88z"/>
+          </svg>
+          
+        </a>
+        <!-- Add more social icons here -->
+      </div>
+      <div class="border-t border-gray-700 pt-6">
+        <p class="text-gray-400">&copy; 2024 YourCompany. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
