--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,10 @@
   <link href="./output.css" rel="stylesheet">
   <title>index</title>
 </head>
-<body class="bg-gray-800 text-gray-300">
+<body class="h-screen bg-cover bg-center" style="background-image: url('/src/img/women/femme-accessoire\ \(6\).jpg');">
+
   <header>
-    <nav class="flex justify-center space-x-4 bg-gray-800 p-4">
+    <nav class="flex justify-center space-x-4 p-4">
       <a href="index.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Accueil</a>
       <a href="men.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Hommes</a>
       <a href="women.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Femmes</a>
@@ -16,12 +17,7 @@
     </nav>
   </header>
 
-  <div class="relative bg-gray-900">
-    <div class="absolute inset-x-0 bottom-0">
-      <svg viewBox="0 0 224 12" fill="currentColor" class="w-full -mb-1 text-gray-800" preserveAspectRatio="none">
-        <path d="M0,0 C48.8902582,6.27314026 86.2235915,9.40971039 112,9.40971039 C137.776408,9.40971039 175.109742,6.27314026 224,0 L224,12.0441132 L0,12.0441132 L0,0 Z"></path>
-      </svg>
-    </div>
+
 
     <div class="px-4 py-16 mx-auto max-w-7xl sm:px-6 lg:px-8 lg:py-20">
       <div class="flex flex-wrap justify-center gap-x-80">
@@ -29,52 +25,10 @@
         <img src="img/kid/clothing-enfant.svg" class="w-24 h-24 rounded-full" alt="Enfant"> 
         <img src="img/women/clothing-femme.svg" class="w-24 h-24 rounded-full" alt="Femme">
       </div>
-
-      <!-- <div class="text-center mt-12">
-        <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">
-          ***, des vêtements pour tous
-        </h2>
-        <p class="mt-6 text-base font-light tracking-wide text-gray-300 md:text-lg">
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
-        </p>
-        <p class="mt-4 text-sm font-light tracking-wide text-gray-500 md:text-base">
-          Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-        </p>
-      </div> -->
     </div>
   </div>
-
-  <div class="p-6 max-w-sm mx-auto bg-white rounded-xl shadow-lg flex items-center gap-x-4 mt-10">
-    
-    <div class="shrink-0">
-      <!-- <img class="h-12 w-12" src="/img/logo.svg" alt="ChitChat Logo"> -->
-    </div>
-    <!-- <div>
-      
-      <div class="text-xl font-medium text-black">ChitChat</div>
-      <p class="text-slate-500">You have a new message!</p>
-    </div>
-  </div> -->
-
-  <!-- <div class="py-8 px-8 max-w-sm mx-auto space-y-2 bg-white rounded-xl shadow-lg sm:py-4 sm:flex sm:items-center sm:space-y-0 sm:gap-x-6 mt-6">
-    <img class="block mx-auto h-24 rounded-full sm:mx-0 sm:shrink-0" src="/img/erin-lindford.jpg" alt="Portrait d'une femme"> -->
-    <!-- <div class="text-center space-y-2 sm:text-left">
-      <div class="space-y-0.5">
-        <p class="text-lg text-black font-semibold">
-          Erin Lindford
-        </p>
-        <p class="text-slate-500 font-medium">
-          Product Engineer
-        </p>
-      </div>
-      <button class="px-4 py-1 text-sm text-purple-600 font-semibold rounded-full border border-purple-200 hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">
-        Message
-      </button>
-    </div> -->$-
-  </div>
-
   
-  <footer class="bg-gray-800 text-white py-16">
+  <footer class=" text-white py-16">
     <div class="container mx-auto text-center">
       <div class="mb-6">
         <h2 class="text-3xl font-bold">******</h2>
@@ -94,8 +48,8 @@
         </a>
         <!-- Add more social icons here -->
       </div>
-      <div class="border-t border-gray-700 pt-6">
-        <p class="text-gray-400">&copy; 2024 YourCompany. All rights reserved.</p>
+      <div class=" border-gray-700 pt-6">
+        <p class="text-gray-400">&copy; 2024 *******. All rights reserved.</p>
       </div>
     </div>
   </footer>
