--- a/src/women.html
+++ b/src/women.html
@@ -111,7 +111,7 @@
         <!-- Add more social icons here -->
       </div>
       <div class="border-t border-gray-700 pt-6">
-        <p class="text-gray-400">&copy; 2024 YourCompany. All rights reserved.</p>
+        <p class="text-gray-400">&copy; 2024 *******. All rights reserved.</p>
       </div>
     </div>
   </footer>
