--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./output.css" rel="stylesheet">
-  <title>index</title>
+  <title>Index</title>
 </head>
-<body class="h-screen bg-cover bg-center" style="background-image: url('/src/img/women/femme-accessoire\ \(6\).jpg');">
-
-  <header>
-    <nav class="flex justify-center space-x-4 p-4">
+<body class="h-screen bg-cover bg-center" style="background-image: url('/src/img/ian-dooley-I2jxLD6obeM-unsplash.jpg');">
+<!-- <body class="h-screen bg-cover bg-center" style="background-image: url('/src/img/women/femme-accessoire\ \(6\).jpg');"> -->
+<!-- Photo de <a href="https://unsplash.com/fr/@sadswim?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">ian dooley</a> sur <a href="https://unsplash.com/fr/photos/homme-marchant-sur-un-sol-en-beton-gris-I2jxLD6obeM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+       -->
+  <header class="relative">
+    <div class="absolute inset-0 bg-gray-800 opacity-50"></div>
+    <nav class="flex justify-center space-x-4 p-4 relative z-10">
       <a href="index.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Accueil</a>
       <a href="men.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Hommes</a>
       <a href="women.html" class="font-bold px-3 py-2 text-slate-300 rounded-lg hover:bg-slate-100 hover:text-slate-900">Femmes</a>
@@ -17,25 +20,37 @@
     </nav>
   </header>
 
-
-
-    <div class="px-4 py-16 mx-auto max-w-7xl sm:px-6 lg:px-8 lg:py-20">
-      <div class="flex flex-wrap justify-center gap-x-80">
-        <img src="img/men/clothing-homme.svg" class="w-24 h-24 rounded-full" alt="Homme">
-        <img src="img/kid/clothing-enfant.svg" class="w-24 h-24 rounded-full" alt="Enfant"> 
-        <img src="img/women/clothing-femme.svg" class="w-24 h-24 rounded-full" alt="Femme">
+  <main>
+    <!-- <section class="relative overflow-hidden w-full h-64">
+      <div class="px-4 py-16 mx-auto max-w-7xl sm:px-6 lg:px-8 lg:py-20">
+        <div class="flex flex-wrap justify-center gap-x-20">
+          <img src="img/men/clothing-homme.svg" class="w-24 h-24 rounded-full" alt="Icône vêtements pour hommes">
+          <img src="img/kid/clothing-enfant.svg" class="w-24 h-24 rounded-full" alt="Icône vêtements pour enfants"> 
+          <img src="img/women/clothing-femme.svg" class="w-24 h-24 rounded-full" alt="Icône vêtements pour femmes">
+        </div>
       </div>
-    </div>
-  </div>
-  
-  <footer class=" text-white py-16">
+    </section> -->
+
+    <section class="py-8">
+      <h2 class="text-center text-2xl font-bold mb-6">Nous vendons les marques suivantes :</h2>
+      <div class="relative w-full grid grid-cols-2 sm:grid-cols-4 gap-8 items-center justify-center">
+        <img src="/src/img/marque/angry-1294363_1280.png" alt="Marque Angry" class="h-28 mx-auto">
+        <img src="/src/img/marque/celtic-1292841_1280.png" alt="Marque Celtic" class="h-28 mx-auto">
+        <img src="/src/img/marque/Kid Pirate.png" alt="Marque Kid Pirate" class="h-28 mx-auto">
+        <img src="/src/img/marque/flame.png" alt="Marque Flame" class="h-28 mx-auto">
+      </div>
+    </section>
+  </main>
+
+  <footer class="relative text-white py-16">
+    <div class="absolute inset-0 bg-gray-800 opacity-50"></div>
     <div class="container mx-auto text-center">
       <div class="mb-6">
         <h2 class="text-3xl font-bold">******</h2>
         <p class="text-gray-400 mt-2">nos  réseaux sociaux</p>
       </div>
       <div class="flex justify-center space-x-4 mb-6">
-        <a href="#" class="text-gray-400 hover:text-white">
+        <a href="#" class=" text-slate-300 rounded-lg hover:bg-slate-100 ">
           <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path d="M22.675 0H1.325C.593 0 0 .592 0 1.324v21.351C0 23.406.593 24 1.325 24h11.495v-9.294H9.69v-3.622h3.129V8.413c0-3.1 1.893-4.788 4.657-4.788 1.325 0 2.463.099 2.794.143v3.24l-1.918.001c-1.504 0-1.796.715-1.796 1.763v2.31h3.587l-.467 3.622h-3.12V24h6.116c.732 0 1.325-.593 1.325-1.325V1.324C24 .592 23.407 0 22.675 0z"/>
           </svg>
@@ -48,7 +63,7 @@
         </a>
         <!-- Add more social icons here -->
       </div>
-      <div class=" border-gray-700 pt-6">
+      <div class="border-gray-700 pt-6">
         <p class="text-gray-400">&copy; 2024 *******. All rights reserved.</p>
       </div>
     </div>
