--- a/src/index.html
+++ b/src/index.html
@@ -41,15 +41,25 @@
         <img src="/src/img/marque/flame.png" alt="Marque Flame" class="h-28 mx-auto">
       </div>
     </section>
-    <section>
-     <h3>Articles vedettes</h3>
-     <img class="w-36 h-32"   src="/src/img/men/homme-accessoire (2).jpg" alt=""> 
-
-     <h4>Pantalons en Jeans (Marque)</h4>
-     <img class="w-36 h-32"   src="/src/img/men/homme-accessoire (2).jpg" alt=""> 
-
-     <h4>Pantalons en Jeans (Marque)</h4>
+    <h3 class="text-center font-bold">Articles vedettes</h3>
+    <section class="grid grid-cols-2 sm:grid-cols-4 gap-8">
      
+     <div>
+     <img class="w-full h-full rounded-md" src="/src/img/men/homme-accessoire (2).jpg" alt=""/> 
+     <h4>Pantalons en Jeans (Marque)</h4>
+    </div>
+    <div>
+     <img class="w-full h-full rounded-md"  src="/src/img/women/femme-chemise (2).jpg" alt="">
+     <h4>Chemise en Jeans (Marque)</h4>
+    </div>
+    <div>
+      <img class="w-full h-full rounded-md"  src="/src/img/kid/accessoir-enfant (1).jpg" alt="">
+      <h4>Collier perle et fleurs (Marque)</h4>
+     </div>
+     <div>
+      <img class="w-full h-full rounded-md"  src="/src/img/men/homme-accessoire (4).jpg" alt="">
+      <h4>Bagues (Marque)</h4>
+     </div>
      
     </section>
   </main>
