ajout section,ajout caroussel

--- a/src/index.html
+++ b/src/index.html
@@ -27,15 +27,15 @@
       <h3 class="text-center text-2xl font-bold mb-6">Nos Promotions</h3>
       <div class="grid grid-cols-1 sm:grid-cols-3 gap-8 max-w-7xl mx-auto px-4">
         <div class="text-center">
-          <img src="/src/img/men/homme-accessoire (5).jpg" alt="Montre Homme" class="w-64 h-96 object-cover mx-auto">
+          <img src="/img/men/homme-accessoire (5).jpg" alt="Montre Homme" class="w-64 h-96 object-cover mx-auto">
           <p class="mt-2 text-lg font-semibold">Montre Homme (Marque)</p>
         </div>
         <div class="text-center">
-          <img src="/src/img/women/femme-chemise (1).jpg" alt="Chemise Femme" class="w-64 h-96 object-cover mx-auto">
+          <img src="/img/women/femme-chemise (1).jpg" alt="Chemise Femme" class="w-64 h-96 object-cover mx-auto">
           <p class="mt-2 text-lg font-semibold">Chemise Femme (Marque)</p>
         </div>
         <div class="text-center">
-          <img src="/src/img/kid/enfant-chemise (2).jpg" alt="Chemise Enfant" class="w-64 h-96 object-cover mx-auto">
+          <img src="/img/kid/enfant-chemise (2).jpg" alt="Chemise Enfant" class="w-64 h-96 object-cover mx-auto">
           <p class="mt-2 text-lg font-semibold">Chemise Enfant (Kid Pirate)</p>
         </div>
       </div>
@@ -49,15 +49,15 @@
         <div class="overflow-hidden relative h-128">
           <div id="carousel" class="flex transition-transform duration-500 ease-in-out">
             <div class="flex-shrink-0 w-full flex flex-col items-center text-center">
-              <img src="/src/img/men/homme-accessoire (5).jpg" alt="Montre Homme" class="w-full max-w64 h-96 object-cover">
+              <img src="/img/men/homme-accessoire (5).jpg" alt="Montre Homme" class="w-full max-w64 h-96 object-cover">
               <p class="mt-2 text-lg font-semibold">Montre Homme (Marque)</p>
             </div>
             <div class="flex-shrink-0 w-full flex flex-col items-center text-center">
-              <img src="/src/img/women/femme-chemise (1).jpg" alt="Chemise Femme" class="w-full max-w64 h-96 object-cover">
+              <img src="/img/women/femme-chemise (1).jpg" alt="Chemise Femme" class="w-full max-w64 h-96 object-cover">
               <p class="mt-2 text-lg font-semibold">Chemise Femme (Marque)</p>
             </div>
             <div class="flex-shrink-0 w-full flex flex-col items-center text-center">
-              <img src="/src/img/kid/enfant-chemise (2).jpg" alt="Chemise Enfant" class="w-full max-w64 h-96 object-cover">
+              <img src="/img/kid/enfant-chemise (2).jpg" alt="Chemise Enfant" class="w-full max-w64 h-96 object-cover">
               <p class="mt-2 text-lg font-semibold">Chemise Enfant (Kid Pirate)</p>
             </div>
           </div>
@@ -77,15 +77,15 @@
       <h3 class="text-center text-2xl font-bold mb-6">Nos Collaborations</h3>
       <div class="grid grid-cols-1 sm:grid-cols-3 gap-8 max-w-7xl mx-auto px-4">
         <div class="text-center">
-          <img src="/src/img/men/homme-accessoire (5).jpg" alt="Montre Homme" class="w-64 h-64 object-cover mx-auto">
+          <img src="/img/men/homme-accessoire (5).jpg" alt="Montre Homme" class="w-64 h-64 object-cover mx-auto">
           <p class="mt-2 text-lg font-semibold">Collaboration Homme</p>
         </div>
         <div class="text-center">
-          <img src="/src/img/women/femme-chemise (1).jpg" alt="Chemise Femme" class="w-64 h-64 object-cover mx-auto">
+          <img src="/img/women/femme-chemise (1).jpg" alt="Chemise Femme" class="w-64 h-64 object-cover mx-auto">
           <p class="mt-2 text-lg font-semibold">Collaboration Femme</p>
         </div>
         <div class="text-center">
-          <img src="/src/img/kid/enfant-chemise (2).jpg" alt="Chemise Enfant" class="w-64 h-64 object-cover mx-auto">
+          <img src="/img/kid/enfant-chemise (2).jpg" alt="Chemise Enfant" class="w-64 h-64 object-cover mx-auto">
           <p class="mt-2 text-lg font-semibold">Collaboration Enfant</p>
         </div>
       </div>
